[package]
name = "quickjs-wasm"
version = "0.3.0"
authors = [""]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
once_cell = "1.18.0"
quickjs-wasm-rs = "1.0.0"
serde_json = "1.0.99"
serde-transcode = "1.1.1"

[features]
default = ["console"]
console = []