[package]
name = "quickjs-wasm"
version = "0.4.0"
authors = [""]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
once_cell = "1.19.0"
quickjs-wasm-rs = "1.0.0"
serde_json = "1.0.108"
serde-transcode = "1.1.1"

[features]
default = ["console"]
console = []
