[package]
name = "quickjs"
version = "0.6.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
wasi-common = "23.0.1"
wasmtime = "23.0.1"
wasmtime-wasi = "23.0.1"

[dev-dependencies]
clap = { version = "4.5.11", features = ["derive"] }
num_cpus = "1.16.0"
rayon = "1.10.0"
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false